# isc2kea

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  TESTING.md
.github/workflows/: release.yml
fixtures/: dnsmasq_minimal.xml  dnsmasq_v6_minimal.xml  golden_expected_dnsmasq.xml  golden_expected_dnsmasq_v6.xml  golden_expected_kea.xml  golden_input.xml  minimal.xml  v6_minimal.xml
src/: backend.rs  cli.rs  errors.rs  extract.rs  extract_dnsmasq.rs  lib.rs  main.rs  migrate.rs  migrate_dnsmasq.rs  migrate_v4.rs  migrate_v6.rs  subnet.rs  types.rs  xml_helpers.rs
src/cli/: convert.rs  mod.rs  scan.rs  verify.rs
src/extract/: interfaces.rs  isc.rs  kea.rs  mod.rs
src/migrate/: dnsmasq.rs  kea.rs  mod.rs  options.rs  services.rs  subnets.rs  utils.rs
src/migrate/dnsmasq/: convert.rs  mod.rs  scan.rs
src/migrate/kea/: convert.rs  mod.rs  scan.rs
tests/: cli.rs  cli_internal.rs  migrate.rs
tests/migrate/: common.rs  dnsmasq.rs  kea.rs  options.rs  subnets.rs
